--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/session-1/fomatting.html
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/session-1/fomatting.html
@@ -7,7 +7,22 @@
     <title>Formatting Elements</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+    <p>Lorem ipsum dolor sit amet, <b>consectetur</b> adipisicing.</p>
+    <p>Lorem ipsum dolor sit amet <strong>consectetur</strong>  adipisicing.</p>
+
+    <p>Lorem, ipsum <i>dolor sit amet</i>  consectetur adipisicing.</p>
+
+    <p>Lorem ipsum <em>dolor sit amet</em> , consectetur adipisicing.</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur <u>adipisicing</u> .</p>
+    <p>Lorem ipsum dolor, sit amet consectetur <ins>adipisicing</ins> .</p>
+
+    <p> <del>700$</del> 450$</p>
+
+    <p>Lorem ipsum dolor sit amet, <span style="background-color:darksalmon">consectetur</span>  adipisicing.</p> 
+
+    <p>X<sup>2</sup></p>
+    <p>H<sub>2</sub>O<sub>4</sub></p>
     
 </body>
 </html>
