--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/session-1/iframe.html
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/session-1/iframe.html
@@ -10,9 +10,13 @@
 
     <h1>iframe</h1>
 
-    <iframe src="https://bbc.com" frameborder="5" width="100%" height="200px"></iframe>
+    
 
     <iframe width="350px"  src="https://www.youtube.com/embed/jCY6DH8F4oc" title="CRUD Tutorial Using React + Firebase | Firebase 9 and Firestore Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <br>
+
+    <iframe src="https://bbc.com" width="80%" height="300px"></iframe>
     
 </body>
 </html>
