--- a/clarusway-full-stack-tr-12-22/javascript/class-notes/js05_loops/index.html
+++ b/clarusway-full-stack-tr-12-22/javascript/class-notes/js05_loops/index.html
@@ -20,6 +20,7 @@
     <h2>JS5 - Loops</h2>
 
     <!-- <script src="1-for.js"></script> -->
-    <script src="2-while-dowhile.js"></script>
+    <!-- <script src="2-while-dowhile.js"></script> -->
+    <script src="3-guestGame.js"></script>
   </body>
 </html>
