--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc07_combinators-outline-practices/3-practice-site.html
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc07_combinators-outline-practices/3-practice-site.html
@@ -128,6 +128,10 @@
         Numquam, laudantium laborum! Nemo placeat tempore distinctio dolores
         illo?
       </p>
+
+      <div class="slack">
+        <i class="fa-brands fa-slack"></i>
+      </div>
     </main>
   </body>
 </html>
