--- a/clarusway-full-stack-tr-12-22/javascript/class-notes/js07_function-2/index.html
+++ b/clarusway-full-stack-tr-12-22/javascript/class-notes/js07_function-2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Basics 6</title>
+    <title>JS Basics 7</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -17,9 +17,8 @@
       />
     </header>
     <h1>JavaScript Basics</h1>
-    <h2>JS6 - Function-1</h2>
+    <h2>JS7 - Function-2</h2>
 
-    <!-- <script src="1-functionDeclaration.js"></script> -->
-    <script src="2-functionExpression.js"></script>
+    <script src="1-arrowFunction.js"></script>
   </body>
 </html>
