--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc14_bootstrap-intro/4-grid.html
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc14_bootstrap-intro/4-grid.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="row">
-        <div class="col-4 bg-secondary">4</div>
+        <div class="col-4 bg-secondary">4</div> <h1>hakan</h1>
       </div>
     </div>
 
