--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc15-16_bootstrap-project/index.html
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc15-16_bootstrap-project/index.html
@@ -68,6 +68,12 @@
 
     <!-- ABOUT-US -->
 
+    <main>
+      <section id="about">
+        <h1>ABOUT</h1>
+      </section>
+    </main>
+
     <!-- FOOTER -->
 
     <!-- UP-BTN -->
