--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc15-16_bootstrap-project/index.html
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc15-16_bootstrap-project/index.html
@@ -95,7 +95,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="./img/slider1.jpg" class="d-block w-100" alt="img1" />
-          <div class="carousel-caption d-none d-sm-block">
+          <div class="carousel-caption d-none d-md-block">
             <h5>Popular Education</h5>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
@@ -109,7 +109,7 @@
         </div>
         <div class="carousel-item">
           <img src="./img/slider2.jpg" class="d-block w-100" alt="img2" />
-          <div class="carousel-caption d-none d-sm-block">
+          <div class="carousel-caption d-none d-md-block">
             <h5>Sucessful Future</h5>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             <div>
@@ -120,7 +120,7 @@
         </div>
         <div class="carousel-item">
           <img src="./img/slider3.jpg" class="d-block w-100" alt="img3" />
-          <div class="carousel-caption d-none d-sm-block">
+          <div class="carousel-caption d-none d-md-block">
             <h5>Dream Job</h5>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div>
@@ -151,14 +151,80 @@
     </div>
 
     <!-- ABOUT-US -->
-
-    <main>
-      <section id="about">
-        <h1>ABOUT</h1>
+    <main class="text-center">
+      <section id="about" class="container bg-light p-3">
+        <h2 class="display-6 text-danger mb-4">ABOUT US</h2>
+        <div class="row justify-content-center">
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <i class="fas fa-globe-americas fa-2x"></i>
+            <h4>Online Courses</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
+              modi assumenda ab. Rerum, sequi neque?
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <i class="fas fa-headset fa-2x"></i>
+            <h4>Fulltime Mentoring</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
+              modi assumenda ab. Rerum, sequi neque? Lorem ipsum, dolor sit amet
+              consectetur adipisicing elit. Ipsa, quos.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <i class="fas fa-book-open fa-2x"></i>
+            <h4>Learn Yourself</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
+              modi assumenda ab. Rerum, sequi neque?
+            </p>
+          </div>
+        </div>
       </section>
+
+      <!-- INSTRUCTORS -->
+      <section id="instructors" class="container bg-dark">
+        <h2 class="display-6 text-danger">INSTRUCTORS</h2>
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <img src="./img/teacher1.jpg" class="card-img-top" alt="t1" />
+              <div class="card-body">
+                <h5 class="card-title">Josh Ren</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <div class="socials d-flex justify-content-around">
+                  <i class="fa-brands fa-facebook-square fa-2x text-danger"></i>
+                  <i
+                    class="fa-brands fa-instagram-square fa-2x text-danger"
+                  ></i>
+                  <i class="fa-brands fa-twitter-square fa-2x text-danger"></i>
+                  <i
+                    class="fa-brands fa-google-plus-square fa-2x text-danger"
+                  ></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- STUDENTS -->
+      <section id="students"></section>
+
+      <!-- COURSES -->
+      <section id="courses"></section>
+
+      <!-- CONTACT -->
+      <section id="contact"></section>
     </main>
 
     <!-- FOOTER -->
+
+    <footer></footer>
 
     <!-- UP-BTN -->
 
