--- a/clarusway-full-stack-tr-12-22/javascript/class-notes/js13_dom-intro/index.html
+++ b/clarusway-full-stack-tr-12-22/javascript/class-notes/js13_dom-intro/index.html
@@ -14,8 +14,8 @@
     <main>
       <section class="add-item">
         <h2>ADD NEW ITEM</h2>
-        <input type="text" />
-        <input type="button" value="ADD" />
+        <input class= "input" type="text" />
+        <input  type="button" value="ADD" id="btn" />
       </section>
       <section class="item-list">
         <h2>ITEM LIST</h2>
