--- a/clarusway-full-stack-tr-12-22/react/class-notes/rc01_intro/dom-render/index.html
+++ b/clarusway-full-stack-tr-12-22/react/class-notes/rc01_intro/dom-render/index.html
@@ -13,6 +13,7 @@
     </div>
     <div class="container-1"></div>
     <div class="container-2"></div>
+    <div class="container-3"></div>
 
     <!-- React kutuphanesinin CDN olarak eklenmesi -->
     <script
