--- a/clarusway-full-stack-tr-12-22/react/class-notes/rc01_intro/dom-render/index.html
+++ b/clarusway-full-stack-tr-12-22/react/class-notes/rc01_intro/dom-render/index.html
@@ -15,7 +15,7 @@
     <div class="container-2"></div>
     <div class="container-3"></div>
 
-    <!-- React kutuphanesinin CDN olarak eklenmesi -->
+    <!-- React kutuphanesinin CDN olarak eklenmesi --->
     <script
       crossorigin
       src="https://unpkg.com/react@17/umd/react.development.js"
