--- a/clarusway-full-stack-tr-12-22/react/class-notes/rc01_intro/dom-render/index.html
+++ b/clarusway-full-stack-tr-12-22/react/class-notes/rc01_intro/dom-render/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOM Render exp</title>
+    <title>DOM Render</title>
   </head>
   <body>
     <div class="div">
@@ -13,9 +13,8 @@
     </div>
     <div class="container-1"></div>
     <div class="container-2"></div>
-    <div class="container-3"></div>
 
-    <!-- React kutuphanesinin CDN olarak eklenmesi --->
+    <!-- React kutuphanesinin CDN olarak eklenmesi -->
     <script
       crossorigin
       src="https://unpkg.com/react@17/umd/react.development.js"
